Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 <body>
 
     <div id="screen2" class="screen active">
-        <div class="lock-heart" onclick="goToScreen(3)">🔒💜</div>
+        <div class="lock-heart" onclick="goToScreen(3)">🔒💜😻</div>
         <p style="color: #000000;">Haz clic para abrir mi corazón</p>
     </div>
 
     <div id="screen3" class="screen">
-        <h2 style="color: #000000;">😻 Fecha Especial 😻</h2>
+        <h2 style="color: #000000;">😻 Fecha Especial 💜😻</h2>
         <div class="calc-container">
             <div id="display" class="display">DD / MM / AAAA</div>
             <div class="grid">
@@ -137,7 +137,7 @@
 <div class="final-card">
     <h1 style="color: #a04dff;">Te amo feliz dia de san valentin 😻💜</h1>
     <img src="foto1.jpeg" alt="Nuestro Amor" style="width: 100%; border-radius: 10px;">
-    <p>💜Gracias por ser mi compañero de vida💜</p>
+    <p>Gracias por ser mi compañero de vida💜😻</p>
 </div>
 
     <audio id="miMusica" src="musica.mp3"></audio>
@@ -173,7 +173,7 @@
         function checkDate() {
             const feedback = document.getElementById('feedback');
             if (inputDate === correctDate) {
-                feedback.innerText = "N&N 😻💜";
+                feedback.innerText = "N&N 💜😻🫰🏻🌕🙏🏻";
                 feedback.className = "msg success";
                 setTimeout(() => goToScreen(4), 1000);
             } else {
@@ -193,3 +193,4 @@ function playMusic() {
 </body>
 
 </html>
+
