Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
 
     <div id="screen2" class="screen active">
-        <div class="lock-heart" onclick="goToScreen(3)">🔒💜😻</div>
+        <div class="lock-heart" onclick="goToScreen(3)">🔒💜</div>
         <p style="color: #000000;">Haz clic para abrir mi corazón</p>
     </div>
 
@@ -137,7 +137,7 @@
 <div class="final-card">
     <h1 style="color: #a04dff;">Te amo feliz dia de san valentin 😻💜</h1>
     <img src="foto1.jpeg" alt="Nuestro Amor" style="width: 100%; border-radius: 10px;">
-    <p>Gracias por ser mi compañero de vida💜😻</p>
+    <h1 style="color: #a04dff;">Gracias por ser mi compañero de vida💜😻</h1>
 </div>
 
     <audio id="miMusica" src="musica.mp3"></audio>
@@ -193,4 +193,5 @@ function playMusic() {
 </body>
 
 </html>
+
 
